Correciones y agregacion de bucles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primera Pre Entrega</h1>
+    <h1>Primera Pre Entrega Gabriel Rodriguez</h1>
 
     <script src="./index.js"></script>
 </body>
