--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Registro de Deudores</title>
+    <title>Proyecto Final Rodriguez</title>
 </head>
 <body>
     <div id="bienvenida">
         <div class="hero">
-            <h2>Bienvenido al Registro de Deudores</h2>
+            <h2>Registro de Deudores</h2>
         </div>
-            <div class="elementosRegistro">
-            <label for="nombreUsuario">Ingresa tu nombre :</label>
+        <div class="elementosRegistro">
+            <label for="nombreUsuario">Ingresa tu nombre:</label>
             <input type="text" id="nombreUsuario">
             <label for="fechaNacimiento">Fecha de Nacimiento:</label>
             <input type="date" id="fechaNacimiento">
+        </div>
+        <div class="mailPassword">
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email">
+            <label for="contrasena">Contraseña:</label>
+            <input type="password" id="contrasena">  
+        </div>
+        <div class="btncontinuar">
             <button id="iniciar">Continuar</button>
         </div>
     </div>
-    <div id="registro">
+    <div id="registro" >
         <div class="hero">
-            <h1>Registro de Deudores</h1>
+            <h2>Registro de Deudores</h2>
         </div>
         <div class="elementosRegistro">
             <label for="nombre">Nombre:</label>
@@ -34,7 +43,9 @@
         </div>
         <ul id="listaDeudores"></ul>
     </div>
+    
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="index.js"></script>
 </body>
 </html>
