Correciones Entrega Final Gabriel Rodriguez

--- a/index.html
+++ b/index.html
@@ -8,42 +8,66 @@
     <title>Proyecto Final Rodriguez</title>
 </head>
 <body>
-    <div id="bienvenida">
-        <div class="hero">
-            <h2>Registro de Deudores</h2>
-        </div>
-        <div class="elementosRegistro">
-            <label for="nombreUsuario">Ingresa tu nombre:</label>
-            <input type="text" id="nombreUsuario">
-            <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-            <input type="date" id="fechaNacimiento">
-        </div>
-        <div class="mailPassword">
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email">
-            <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena">  
-        </div>
-        <div class="btncontinuar">
-            <button id="iniciar">Continuar</button>
-        </div>
-    </div>
-    <div id="registro" >
-        <div class="hero">
-            <h2>Registro de Deudores</h2>
-        </div>
-        <div class="elementosRegistro">
+    <header class="hero">
+        <h1>Registro de Deudores</h1>
+    </header>
+    <section class="elementosRegistro">
+        <div class="form-group">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre">
+        </div>
+        <div class="form-group">
             <label for="edad">Edad:</label>
             <input type="number" id="edad">
+        </div>
+        <div class="form-group">
             <label for="monto">Monto:</label>
             <input type="number" id="monto">
-            <button id="agregar">Agregar Deudor</button>
         </div>
-        <ul id="listaDeudores"></ul>
+        <div class="form-group">
+            <label for="fechaVencimiento">Fecha de Vencimiento:</label>
+            <input type="date" id="fechaVencimiento">
+        </div>
+    </section>
+    <div class="botonAgregar">
+        <button id="agregar" >Agregar Deudor</button>
     </div>
-    
+    <section id="filtroOrden">
+        <button id="ordenarNombre">Ordenar por Nombre</button>
+        <button id="ordenarEdad">Ordenar por Edad</button>
+        <button id="ordenarMonto">Ordenar por Monto</button>
+        <button id="ordenarFechaVencimiento">Ordenar por Fecha de Vencimiento</button>
+    </section>
+    <h2>Lista de Deudores</h2>
+    <div class="tablaDeDeudores">
+        <table id="tablaDeudores">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Edad</th>
+                    <th>Monto</th>
+                    <th>Fecha de Vencimiento</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody id="cuerpoTabla"></tbody>
+        </table>
+    </div>
+
+    <h3>Empresas que recomiendan nuestro sistema de registro</h3>
+    <div class="tablaDeRecomendadoras">
+        <table id="tablaRecomendadoras" class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Nombre de la Empresa</th>
+                    <th>Sitio Web</th>
+                </tr>
+            </thead>
+            <tbody>
+               
+            </tbody>
+        </table>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="index.js"></script>
